...
                                <color key="textColor" red="0.0" green="0.098039215690000001" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fKg-pE-zH0">
                                <rect key="frame" x="16" y="256.33333333333331" width="343" height="44"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Road Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3T9-8V-4NA">
                                        <rect key="frame" x="12" y="0.0" width="319" height="44"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" returnKeyType="done"/>
                                    </textField>
                                </subviews>
...
                                <rect key="frame" x="16" y="734" width="343" height="44"/>
                                <color key="backgroundColor" red="0.0" green="0.098039215690000001" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="XDn-aO-eBh"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Get status">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="getStatusButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HyJ-YL-iYf"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="u2i-Yh-b6I" firstAttribute="centerX" secondItem="YZc-g5-vPc" secondAttribute="centerX" id="pcM-HK-OTz"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YZc-g5-vPc" secondAttribute="trailing" constant="16" id="r1A-iT-dlF"/>
                            <constraint firstItem="fKg-pE-zH0" firstAttribute="leading" secondItem="XxX-Y2-M1L" secondAttribute="leading" id="tov-5z-UOY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="London Roads" id="yvG-NV-YJX"/>
                    <connections>
                        <outlet property="activityIndicator" destination="u2i-Yh-b6I" id="65n-es-V4V"/>
                        <outlet property="getStatusButton" destination="YZc-g5-vPc" id="f5E-k9-BAi"/>
                        <outlet property="textField" destination="3T9-8V-4NA" id="xd6-KZ-fqz"/>
                        <outlet property="textFieldWrapperView" destination="fKg-pE-zH0" id="RSz-VF-UFL"/>
                        <segue destination="nQG-vk-h5m" kind="show" identifier="InputToDetailSegue" id="v6K-N8-gCe"/>
...
