...
                
            case .successful:
                
                guard road != nil else {
                    // Road is not defined in TfL API.
                    self.resetButton()
                    self.presentError("The road name you entered cannot be found.")
                    return
                }
                
                DispatchQueue.main.async {
                    self.performSegue(withIdentifier: toDetailSegue, sender: road!)
                }
...
